# WirelessCarPlay

./: LICENSE  README.md  WirelessCarPlay.code-workspace
binaries/: README.md
mDNSResponder/: .gitignore  Makefile  mDNSResponder.sln
mDNSResponder/Clients/: Makefile  dns-sd.c  dnsctl.c
mDNSResponder/Clients/BonjourExample/: stdafx.h
mDNSResponder/Clients/DNS-SD.VisualStudio/: dns-sd.vcxproj  dns-sd.vcxproj.filters  resource.h
mDNSResponder/Clients/DNSServiceBrowser.NET/: DNSServiceBrowser.NET.csproj  DNSServiceBrowser.cs
mDNSResponder/Clients/DNSServiceBrowser.VB/: DNSServiceBrowser.VB.vbproj  DNSServiceBrowser.vb
mDNSResponder/Clients/ExplorerPlugin/: About.h  ClassFactory.cpp  ClassFactory.h  ExplorerBar.cpp  ExplorerBar.h  ExplorerBarWindow.cpp  ExplorerBarWindow.h  ExplorerPlugin.cpp  ExplorerPlugin.h  ExplorerPlugin.vcxproj  ExplorerPlugin.vcxproj.filters  ExplorerPluginLocRes.vcxproj  ExplorerPluginLocRes.vcxproj.filters  ExplorerPluginRes.vcxproj  ExplorerPluginRes.vcxproj.filters  LoginDialog.h  Resource.h  StdAfx.h  resource_dll.h  resource_loc_res.h  resource_res.h
mDNSResponder/Clients/FirefoxExtension/: CDNSSDService.cpp  CDNSSDService.h  CDNSSDServiceModule.cpp  FirefoxExtension.vcxproj  IDNSSDService.h  (+3 more)
mDNSResponder/mDNSCore/: DNSCommon.c  DNSCommon.h  anonymous.c  dnsproxy.c  dnsproxy.h  dnssec.c  mDNS.c  mDNSEmbeddedAPI.h  nsec.c  nsec3.c  nsec3.h  uDNS.c  uDNS.h
mDNSResponder/mDNSMacOSX/: BLE.c  BLE.h  BonjourEvents-Info.plist  BonjourEvents.c  CryptoSupport.c  CryptoSupport.h  DNSProxySupport.c  DNSSECSupport.c  DNSSECSupport.h  DNSServiceDiscovery.c  DNSServiceDiscovery.h  DNSServiceDiscoveryDefines.h  LegacyNATTraversal.c  Metrics.h  Metrics.m  P2PPacketFilter.c  P2PPacketFilter.h  README.privsep  SymptomReporter.c  com.apple.dnsextd.plist  com.apple.mDNSResponder.plist  com.apple.mDNSResponderHelper.plist  coreBLE.h  coreBLE.m  daemon.c  dnsctl-entitlements.plist  helper-main.c  helper-server.h  helper-stubs.c  helper.c  helper.h  helpermsg-types.h  ipsec_strerror.h  libpfkey.h  mDNSMacOSX.c  mDNSMacOSX.h  mDNSResponder-entitlements.plist  mDNSResponder.order  mDNSResponder.plist  mDNSResponder.sb  (+3 more)
mDNSResponder/mDNSPosix/: Client.c  ExampleClientApp.c  ExampleClientApp.h  Identify.c  Makefile  NetMonitor.c  PosixDaemon.c  ProxyResponder.c  Responder.c  mDNSPosix.c  mDNSUNP.c  mdnsd.sh  nss_mdns.c
mDNSResponder/mDNSShared/: CommonServices.h  DebugServices.c  DebugServices.h  PlatformCommon.c  dns_sd.h  dnsextd.c  dnsextd.h  dnsextd_lexer.l  dnsextd_parser.y  dnssd_clientlib.c  dnssd_clientshim.c  dnssd_clientstub.c  dnssd_ipc.h  uds_daemon.c  uds_daemon.h
mDNSResponder/mDNSVxWorks/: mDNSVxWorks.c  mDNSVxWorks.h  mDNSVxWorksIPv4Only.c  mDNSVxWorksIPv4Only.h
mDNSResponder/mDNSWindows/: PosixCompat.h  Secret.c  Secret.h  WinVersRes.h  isocode.h  mDNSWin32.c
mDNSResponder/unittests/: DNSMessageTest.c  DNSMessageTest.h  DomainNameTest.c  DomainNameTest.h  InterfaceTest.c  InterfaceTest.h  ResourceRecordTest.c  ResourceRecordTest.h  main.c  unittest.c  unittest.h
source/: CMakeLists.txt  README.cn  README.md
source/AccessorySDK/: CMakeLists.txt
source/AccessorySDK/EasyConfig/: EasyConfigUtils.c  EasyConfigUtils.h
source/AccessorySDK/PlatformPOSIX/: Makefile  Makefile.back
source/AccessorySDK/PlatformWindows/: CoreUtils.def  CoreUtils.sln  CoreUtils.vcxproj  CoreUtils.vcxproj.filters  CoreUtilsCFLite.def  CoreUtilsDLLMain.c
source/AccessorySDK/Sources/: ProjectVersion.h
source/AccessorySDK/Support/: AESUtils.c  AESUtils.h  ArrayUtils.c  ArrayUtils.h  AsyncConnection.c  AsyncConnection.h  AtomicUtils.c  AtomicUtils.h  AudioUtils.c  AudioUtils.h  AudioUtilsDLL.c  AudioUtilsDarwin.c  AudioUtilsWindows.c  Base64Utils.c  Base64Utils.h  BonjourAdvertiser.c  BonjourAdvertiser.h  BonjourBrowser.c  BonjourBrowser.h  CFCompat.c  CFCompat.h  CFLite.c  CFLite.h  CFLiteBinaryPlist.c  CFLiteBinaryPlist.h  CFLitePreferencesFile.c  CFLiteRunLoopSelect.c  CFPrefUtils.c  CFPrefUtils.h  CFUtils.c  CFUtils.h  ChaCha20Poly1305.c  ChaCha20Poly1305.h  ChecksumUtils.c  ChecksumUtils.h  CommandLineUtils.c  CommandLineUtils.h  CommonServices.h  CryptoHashUtils.c  CryptoHashUtils.h  (+96 more)
source/AccessorySDK/Support/CoreUtils/: CommonServices.h  DispatchLite.h  KeychainLite.h  SHAUtils.h  curve25519-donna.h  ed25519.h
source/Common/: APConfig.h  APFeatures.h  APStatusFlags.h
source/Examples/: ALSAMixer.c  ALSAMixer.h  AppleCarPlay_AppStub.c  AudioUtilsALSA.c  CMakeLists.txt  HIDKnob.c  HIDKnob.h  HIDMediaButtons.c  HIDMediaButtons.h  HIDTelephony.c  HIDTelephony.h  HIDTouchScreen.c  HIDTouchScreen.h  HIDTouchpad.c  HIDTouchpad.h  _.asoundrc
source/Platform/: AudioConverterStub.c  AudioUtilsStub.c  HIDKnob.c  HIDKnob.h  HIDMediaButtons.c  HIDMediaButtons.h  HIDProximity.c  HIDProximity.h  HIDTelephony.c  HIDTelephony.h  HIDTouchScreen.c  HIDTouchScreen.h  HIDTouchpad.c  HIDTouchpad.h  ScreenUtilsStub.c
source/PlatformPOSIX/: Makefile
source/Sources/: AirPlayCommon.h  AirPlayReceiverPOSIX.c  AirPlayReceiverServer.c  AirPlayReceiverServer.h  AirPlayReceiverServerPriv.h  AirPlayReceiverSession.c  AirPlayReceiverSession.h  AirPlayReceiverSessionPriv.h  AirPlayReceiverSessionScreen.c  AirPlayReceiverSessionScreen.h  AirPlaySettings.c  AirPlaySettings.h  AirPlayUtils.c  AirPlayUtils.h  AirPlayVersion.h  AirTunesClock.c  AirTunesClock.h  CarPlayControlClient.c  CarPlayControlClient.h  airplayutil.c
source/Support/: APSAudioConverter.h  APSAudioConverterStub.c  APSAudioSession.h  APSAudioSessionStub.c  APSDispatchUtils.h  AudioConverter.h  AudioConverterDLL.c  AudioUtils.h  AudioUtilsDLL.c  AudioUtilsStub.c  CMakeLists.txt  CarPlayControlCommon.h  ScreenUtils.c  ScreenUtils.h  ScreenUtilsDLL.c  ScreenUtilsStub.c
source/Support/pkg-config/: libAirPlaySupport.pc  libAudioStream.pc  libScreenStream.pc
source/Transport/: APAdvertiser.c  APAdvertiser.h  APAdvertiserInfo.c  APAdvertiserInfo.h  APAdvertiserInfoPriv.h  APAdvertiserPriv.h  APDiscoveryBonjourCommon.h
source/pkg-config/: libAirPlay.pc  libAirPlaySupport.pc  libCoreUtils.pc  libdns_sd.pc
(+121 files in other folders)
